<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arducam_ros2</name>
  <version>0.2.0</version>
  <description>This package interfaces is based of Mohamed Abdelkader's implementation of the arducam_ros2</description>
  <maintainer email="williamwarrenmeeks@gmail.com">William Warren-Meeks</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>python3-v4l2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
